# soops

./: .gitignore  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  run_parametric.py  scrape_results.py  setup.cfg  setup.py
examples/: monty_hall.py
soops/: __init__.py  base.py  cliargs.py  find_studies.py  formatting.py  ioutils.py  parsing.py  plot_selected.py  plugins.py  print_info.py  run_parametric.py  scoop_outputs.py  show_jobs.py  timing.py  version.py
soops/examples/: monty_hall.py  studies.cfg
soops/tests/: test_base.py  test_scripts.py
tests/: test_scripts.py
