[metadata]
name = soops
version = attr: soops.__version__
description = Run parametric studies and scoop output files.
url = https://github.com/rc/soops
author = Robert Cimrman
author_email = cimrman3@ntc.zcu.cz
license = BSD
license_file = LICENSE.txt
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Utilities
keywords =
    run parametric studies
    scoop output

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pyparsing
    dask
    distributed
    pandas
    tables
    matplotlib

[options.entry_points]
console_scripts =
    soops-run = soops.run_parametric:main
    soops-scoop = soops.scoop_outputs:main
    soops-info = soops.print_info:main
